--- a/taller-acuarela.html
+++ b/taller-acuarela.html
@@ -5,12 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<!--     
     <meta name='author' content="Nixon_Adaps">
     <meta name="description" content="Taller de Acuarelas para niños,  podrás explorar el temario y sus objetivos, resultados de nuestros alumnos y clases demostrativas">
 
     <meta name="keywords" content="Taller, acuarela, arte, Miraflores, lima, viaje, Perú, taller de verano, invierno, dibujo, mejorar, aprender, online, pintura, pigmento, técnicas de la acuarela, abstracta, hermoso, kevinArtWorkshops, kevinArt, kevin Arrese, Arrese">
- -->
 
     <title>KevinArtWorkShops</title>
     <link rel="icon" type="image/png" href="https://i.ibb.co/PmFD492/icon.png">
@@ -113,9 +111,9 @@
             </div>    
         </div>    
         <div class="botonesmas">
-            <a class="uno" href="#">Resultados</a>
-            <a class="dos" href="#">Demostraciones Gratuitas</a>
-            <a class="tres" href="#">Temario</a>
+            <a class="coloruno" href="#">Resultados</a>
+            <a class="colordos" href="#">Demostraciones Gratuitas</a>
+            <a class="colortres" href="#">Temario</a>
         </div>   
         <div class="new">
             <a href="https://api.whatsapp.com/send?phone=51931771104&text=Hola,%20vi%20su%20pagina%20web%20del%20Taller%20de%20Acuarela,%20quiero%20mas%20información,%20gracias.">
@@ -124,5 +122,46 @@
         </div>
     </div>
 
+    <script src="js/script.js"></script>
+
+    <script type="text/javascript" src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/owl-carousel/1.3.3/owl.carousel.min.js"></script>
+
+    <script>
+        $(document).ready(function(){
+            $("#testimonial-slider").owlCarousel({
+                items:2,
+                itemsDesktop:[1000,2],
+                itemsDesktopSmall:[990,2],
+                itemsTablet:[768,1],
+                pagination:true,
+                navigation:false,
+                navigationText:["",""],
+                slideSpeed:10000,
+                autoPlay:true
+            });
+        });
+
+
+        const pics = document.querySelector(".integrantes-pics");
+        const textFull = document.querySelector(".integrantes-contents");
+
+        for (pic of pics.children) {
+        pic.addEventListener("click", function() {
+          for (elem of pics.children) {
+            elem.classList.remove("active");
+          }
+          this.classList.add("active");
+
+          const current = Number(this.getAttribute("id"));
+
+          for (text of textFull.children) {
+            text.classList.remove("active");
+          }
+          textFull.children[current].classList.add("active");
+        });
+        }
+
+    </script>
 </body>
 </html>
