--- a/taller-acuarela.html
+++ b/taller-acuarela.html
@@ -5,10 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+<!--     
     <meta name='author' content="Nixon_Adaps">
     <meta name="description" content="Taller de Acuarelas para niños,  podrás explorar el temario y sus objetivos, resultados de nuestros alumnos y clases demostrativas">
 
     <meta name="keywords" content="Taller, acuarela, arte, Miraflores, lima, viaje, Perú, taller de verano, invierno, dibujo, mejorar, aprender, online, pintura, pigmento, técnicas de la acuarela, abstracta, hermoso, kevinArtWorkshops, kevinArt, kevin Arrese, Arrese">
+ -->
 
     <title>KevinArtWorkShops</title>
     <link rel="icon" type="image/png" href="https://i.ibb.co/PmFD492/icon.png">
@@ -111,9 +113,9 @@
             </div>    
         </div>    
         <div class="botonesmas">
-            <a class="coloruno" href="#">Resultados</a>
-            <a class="colordos" href="#">Demostraciones Gratuitas</a>
-            <a class="colortres" href="#">Temario</a>
+            <a class="coloruno" href="https://www.facebook.com/kevinartworkshops/photos/?ref=page_internal" target="_blank">Resultados</a>
+            <a class="colordos" href="https://www.facebook.com/kevinartworkshops/photos/?ref=page_internal" target="_blank">Demostraciones Gratuitas</a>
+            <a class="colortres" href="temario.html" target="_blank">Temario</a>
         </div>   
         <div class="new">
             <a href="https://api.whatsapp.com/send?phone=51931771104&text=Hola,%20vi%20su%20pagina%20web%20del%20Taller%20de%20Acuarela,%20quiero%20mas%20información,%20gracias.">
