--- a/taller-acuarela.html
+++ b/taller-acuarela.html
@@ -115,7 +115,7 @@
         <div class="botonesmas">
             <a class="coloruno" href="https://www.facebook.com/kevinartworkshops/photos/?ref=page_internal" target="_blank">Resultados</a>
             <a class="colordos" href="https://www.facebook.com/kevinartworkshops/photos/?ref=page_internal" target="_blank">Demostraciones Gratuitas</a>
-            <a class="colortres" href="temario.html" target="_blank">Temario</a>
+            <a class="colortres" href="temario.html">Temario</a>
         </div>   
         <div class="new">
             <a href="https://api.whatsapp.com/send?phone=51931771104&text=Hola,%20vi%20su%20pagina%20web%20del%20Taller%20de%20Acuarela,%20quiero%20mas%20información,%20gracias.">
