--- a/temario.html
+++ b/temario.html
@@ -52,7 +52,7 @@
                 <div class="text-title">
                     <h1>Temario</h1>
 
-                    <p>Explora los objetios y resultados de cada clase.</p>
+                    <p>Explora los objetivos y resultados de cada clase.</p>
 
                     <div class="new">
                         <a href="https://api.whatsapp.com/send?phone=51931771104&text=Hola,%20vi%20su%20pagina%20web%20del%20Taller%20de%20Acuarela,%20quiero%20mas%20información,%20gracias.">
