--- a/taller-acuarela.html
+++ b/taller-acuarela.html
@@ -55,8 +55,9 @@
                     <h1>Taller de Acuarela</h1>
 
                     <p>Explora los detalles, resultados, experiencias, demostraciones y más.</p>
-
-                    <input type="button" value="INSCRIBIRME">
+                    <a href="https://api.whatsapp.com/send?phone=51931771104&text=Hola,%20vi%20su%20pagina%20web%20del%20Taller%20de%20Acuarela,%20estoy%20interesad@,%20gracias.">
+                        <input type="button" value="INSCRIBIRME">
+                    </a>
                 </div>
 
                 <div class="svg">
@@ -118,7 +119,7 @@
             <a class="colortres" href="temario.html">Temario</a>
         </div>   
         <div class="new">
-            <a href="https://api.whatsapp.com/send?phone=51931771104&text=Hola,%20vi%20su%20pagina%20web%20del%20Taller%20de%20Acuarela,%20quiero%20mas%20información,%20gracias.">
+            <a href="https://api.whatsapp.com/send?phone=51931771104&text=Hola,%20vi%20su%20pagina%20web%20del%20Taller%20de%20Acuarela,%20estoy%20interesad@,%20gracias.">
                 <input type="button" value="INSCRIBIRME">
             </a>
         </div>
