--- a/Nosotros.html
+++ b/Nosotros.html
@@ -5,19 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>KevinArtWorkShops</title>
-
     <link rel="icon" type="image/png" href="https://i.ibb.co/PmFD492/icon.png">
-
-
     <script src="https://kit.fontawesome.com/41bcea2ae3.js" crossorigin="anonymous"></script>
-
     <link rel="stylesheet" href="css/style.css">
-    
 </head>
 <body>
-    
     <header>
-
         <div class="container__menu">
             <div class="logo">
                 <img src="images/logo-kevin-art-workshop.png" alt="">
@@ -29,7 +22,7 @@
                 <!-- https://i.ibb.co/d0YyzC8/logo-preview-rev-1.png -->
                     <img src="images/logo-kevin-art-workshop.png" alt="">
                     <ul>
-                        <li><a href="../" >Inicio</a></li>
+                        <li><a href="index.html" >Inicio</a></li>
                         <li><a href="#nosotros" id="selected">Nosotros</a></li>
                         <li><a href="https://www.facebook.com/groups/comunidadtallereskevinart/" target="_blank" class="efect">Comunidad</a></li>
                         <li><a href="index.html#Talleres">Talleres</a></li>
@@ -37,9 +30,7 @@
                 </nav>
             </div>
         </div>
-
     </header>
-
     <main>
         <div class="container__cover uno">
             <div class="cover">
