--- a/temario.html
+++ b/temario.html
@@ -35,7 +35,7 @@
                 <!-- https://i.ibb.co/d0YyzC8/logo-preview-rev-1.png -->
                     <img src="images/logo-kevin-art-workshop.png" alt="">
                     <ul>
-                        <li><a href="../" class="efect" >Inicio</a></li>
+                        <li><a href="index.html" class="efect" >Inicio</a></li>
                         <li><a href="Nosotros.html#nosotros" class="efect">Nosotros</a></li>
                         <li><a href="https://www.facebook.com/groups/comunidadtallereskevinart/" target="_blank" class="efect">Comunidad</a></li>
                         <li><a href="index.html#Talleres">Talleres</a></li>
