--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
     <div class="comunidad">
         
         <div class="box">
-            <h1>Aprender, disfruta y comparte  tus trabajos en nuestra comunidad</h1>
+            <h1>Aprende, disfruta y comparte  tus trabajos en nuestra comunidad</h1>
             <div class="img">
                 <img src="./images/box-comu.JPG">
             </div>
@@ -156,7 +156,7 @@
             </div>
             <div class="input">
                 <div class="new margincero">
-                    <a href="#">
+                    <a href="https://www.facebook.com/groups/comunidadtallereskevinart/">
                         <input type="button" value="UNIRME">
                     </a>
                 </div>
